--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="imgManual">manual</string>
     <string name="imgBarcode">barcode</string>
     <string name="imgRestaurant">restaurant</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
